--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Anderson Armindo João <andersonarmindojoao@outlook.com>",
   "private": true,
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "deploy": "quasar build -n pwa && firebase deploy",
   },
   "dependencies": {
     "axios": "^1.2.1",
