--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "deploy": "quasar build -n pwa && firebase deploy"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.3.4",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "video.js": "^8.0.4",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
