--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+public/video-files/Presságio - Meia dúzia ou seis- ft Rui Michel.mp4
+src/assets/videos/Presságio - Meia dúzia ou seis- ft Rui Michel.mp4
